# gnome-peercast-player

./: .gitignore  Makefile.in  README  README.md  aclocal.m4  configure  configure.ac  gpp_main.glade  gpp_main.py  style.css
data/: Makefile.am  Makefile.in  gnome-peercast-player.desktop
data/icons/: Makefile.in
data/icons/hicolor/: Makefile.in
data/icons/hicolor/48x48/: Makefile.in
data/icons/hicolor/48x48/apps/: Makefile.am  Makefile.in
data/icons/hicolor/scalable/: Makefile.in
data/icons/hicolor/scalable/apps/: Makefile.am  Makefile.in
data/ui/: Makefile.am  Makefile.in  main_window.ui  style.css
src/: Makefile.am  Makefile.in  gnome-peercast-player.in
src/gpp/: Makefile.am  Makefile.in  application.py
