#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([GNOME Peercast Player], [0.1], [https://github.com/ktkr3d/gnome-peercast-player])

AM_INIT_AUTOMAKE
AM_PATH_PYTHON([2.7.11])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 data/Makefile
                 data/gnome-peercast-player.desktop
                 data/icons/Makefile
                 data/icons/hicolor/48x48/Makefile
                 data/icons/hicolor/48x48/apps/Makefile
                 data/icons/hicolor/Makefile
                 data/icons/hicolor/scalable/Makefile
                 data/icons/hicolor/scalable/apps/Makefile
                 data/ui/Makefile
                 src/Makefile
                 src/gpp/Makefile])
AC_OUTPUT
